implement CRUD operations for inventory items and variants